sassi-macros/tests/lihaaf/compile_fail/cacheable_unknown_option.stderr
error: Cacheable: unsupported #[cacheable(...)] option
 --> $DIR/cacheable_unknown_option.rs:6:13
  |
6 | #[cacheable(foo = "bar")]
  |             ^^^

error: aborting due to 1 previous error
